--- a/src/components/ModernNavbar.css
+++ b/src/components/ModernNavbar.css
@@ -18,10 +18,17 @@
 }
 
 .logo {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #333;
-}
+    display: flex;
+    align-items: center;
+  }
+  
+.logo-img {
+    width: 120px; /* Adjust logo size */
+    height: auto;
+    max-height: 60px; /* Limit height for consistent navbar size */
+    padding-top: 0%;
+    margin-top: 6px;
+  }
 
 /* Navbar Links */
 .nav-links {
