--- a/src/menu links/Contact.css
+++ b/src/menu links/Contact.css
@@ -4,13 +4,13 @@
     margin: 0 auto;
     padding: 50px 20px;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 65px;
 
   }
   
   .contact-container h1 {
     font-size: 3rem;
-    font-family: 'Martian mono';
+    font-family: 'poppins';
     margin-bottom: 5px;
   }
   
