--- a/src/components/ModernNavbar.css
+++ b/src/components/ModernNavbar.css
@@ -35,7 +35,7 @@
     list-style: none;
     display: flex;
     gap: 30px;
-    font-family: 'Martian Mono';
+    font-family: 'poppins';
 }
 
 .nav-links li a {
