--- a/src/menu links/Careers.css
+++ b/src/menu links/Careers.css
@@ -5,14 +5,14 @@
   margin: 0 auto;
   padding: 50px 20px;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 65px;
 }
 
 .careers-header h1 {
   font-size: 3.0rem;
   margin-bottom: 10px;
   color: #333;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
   
 
 }
@@ -21,7 +21,7 @@
   font-size: 1.2rem;
   margin-bottom: 40px;
   color: #555;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 
 }
 
@@ -44,14 +44,14 @@
 .careers-card h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 
 }
 
 .careers-card p {
   font-size: 0.8rem;
   color: #555;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 }
 
 .careers-cta {
@@ -61,7 +61,7 @@
 .careers-cta h2 {
   font-size: 2.2rem;
   margin-bottom: 20px;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 
 }
 
@@ -69,7 +69,7 @@
   font-size: 1.0rem;
   margin-bottom: 30px;
   color: #666;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 
 }
 
@@ -81,7 +81,7 @@
   border-radius: 10px;
   cursor: pointer;
   font-size: 1.0rem;
-  font-family: 'Martian mono';
+  font-family: 'poppins';
 }
 
 .careers-cta button:hover {
