--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -49,7 +49,7 @@
     align-items: center;
     justify-content: center;
     z-index: 1000;
-    font-family: 'Poppins';
+    font-family: ;
 }
 
 .modal-overlay {
